# AugmentedChords

./: .gitignore  README.md  bun.lockb  create_bitmaps.ipynb  hello.py  image_compressor.py  image_cropper.py  index-pp.ts  index.ts  main.py  musicxml_renderer.py  musicxml_to_bitmaps.py  musicxml_to_png.py  mxl_to_bitmap.py  package.json  pyproject.toml  requirements.txt  resize.py  temp.musicxml  tuner.ts  visualization.py
python-scripts/: create_bitmaps.ipynb  create_empty_bitmap.py  manual_pngs_to_bitmaps.py  megalovania.mxl  musicxml_to_bitmaps.py  musicxml_to_png.py  pcm_to_notes.py
