[project]
name = "augmentedchords"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "music21>=9.5.0",
    "opencv-python>=4.11.0.86",
    "streamlit>=1.42.2",
    "tqdm>=4.67.1",
]
