[project]
name = "augmentedchords"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.11",
    "jupyter>=1.1.1",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.1",
    "music21>=9.5.0",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "scipy>=1.15.2",
    "streamlit>=1.42.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]
